Add public teacher profiles
